<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/bg_color"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/recording_duration_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="18dp"
        android:text="@string/video_duration"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/radio_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/unlimited_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginRight="50dp"
        android:text="@string/unlimited"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/pro_iv"
        app:layout_constraintStart_toStartOf="@id/radio_group"
        app:layout_constraintTop_toBottomOf="@id/recording_duration_tv" />

    <TextView
        android:visibility="gone"
        android:id="@+id/tv_unlimitedtime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="120 Min"
        android:gravity="end"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/unlimited_time"
        app:layout_constraintEnd_toEndOf="@id/radio_group"
        app:layout_constraintStart_toEndOf="@id/unlimited_time"
        app:layout_constraintTop_toTopOf="@id/unlimited_time"  />


    <ImageView
        android:visibility="visible"
        android:id="@+id/pro_iv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/unlimited"
        android:src="@drawable/pro_icon"
        app:layout_constraintBottom_toBottomOf="@id/unlimited_time"
        app:layout_constraintEnd_toEndOf="@id/radio_group"
        app:layout_constraintStart_toEndOf="@id/unlimited_time"
        app:layout_constraintTop_toTopOf="@id/unlimited_time" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/unlimited_time">

        <RadioButton
            android:visibility="gone"
            android:id="@+id/onetwenty_minutes_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layoutDirection="rtl"
            android:text="@string/_120_min"
            android:textAlignment="textStart"
            android:checked="true"
            android:textColor="@color/white"
            />

        <RadioButton
            android:id="@+id/sixty_minutes_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layoutDirection="rtl"
            android:text="@string/_60_min"
            android:textAlignment="textStart"
            android:checked="true"
            android:textColor="@color/white"
            />

        <RadioButton
            android:id="@+id/fourty_five_minutes_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layoutDirection="rtl"
            android:text="@string/_45_min"
            android:textAlignment="textStart"
           android:textColor="@color/white" />
        <RadioButton
            android:id="@+id/thirty_minutes_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layoutDirection="rtl"
            android:text="@string/_30_min"
            android:textAlignment="textStart"
           android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/fifteen_minutes_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layoutDirection="rtl"
            android:text="@string/_15_min"
            android:textAlignment="textStart"
           android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/ten_minutes_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layoutDirection="rtl"
            android:text="@string/_10_min"
            android:textAlignment="textStart"
           android:textColor="@color/white" />
        <RadioButton
            android:id="@+id/five_minutes_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layoutDirection="rtl"
            android:text="@string/_5_min"
            android:textAlignment="textStart"
           android:textColor="@color/white" />


    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>