<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/bg_color"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.dt.auto.background.video.recorder.app_ui.activity.settings.setting_custom_views.SettingsRadioButton
            android:id="@+id/small_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/small" />

        <com.dt.auto.background.video.recorder.app_ui.activity.settings.setting_custom_views.SettingsRadioButton
            android:id="@+id/medium_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/medium" />

        <com.dt.auto.background.video.recorder.app_ui.activity.settings.setting_custom_views.SettingsRadioButton
            android:id="@+id/large_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/large" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>